using System;

namespace Assets.Scripts.StringConstant
{
    internal class AnimationString
    {
        //Player Animator
        internal static String CANMOVE = "canMove";
        internal static String HORIZONTALSPEED = "HorizontalSpeed";
        internal static String ISALIVE = "isAlive";
        internal static String MAINACTIONDOWN = "MainActionDown";
        internal static String MAINACTIONLEFT = "MainActionLeft";
        internal static String MAINACTIONRIGHT = "MainActionRight";
        internal static String MAINACTIONUP = "MainActionUp";
        internal static String TAKEHIT = "TakeHit";
        internal static String VERTICALSPEED = "VerticalSpeed";
        internal static String ISDASHING = "IsDashing";
        internal static String canFlipSprite = "canFlipSprite";

        //HUD Health Bar Animator
        internal static String HASHEALTHPOINT = "HasHealthPoint";


    }
}
